--- a/css/sticky.css
+++ b/css/sticky.css
@@ -14,8 +14,9 @@
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 100px;
+    height: 285px;
     background-color: #f5f5f5;
+    padding-top: 10px;
   }
 
 
@@ -24,7 +25,8 @@
   /* Not required for template or sticky footer method. */
 
   body > .container {
-    padding: 100px 15px 0;
+    padding-top: 0px;
+    padding-bottom: 10px;
   }
   .container .text-muted {
     margin: 20px 0;
@@ -77,6 +79,19 @@ footer ul li a, footer ul li a:hover{
 }
 footer ul li{
   list-style: none;
+}
+.footer_telefone{
+  background-color: #ecf0f1;
+  border: 1px solid #7f8c8d;
+  color: rgb(197,197,197);
+  font-size: 18px;
+  padding: 20px;
+  margin-top: 38px;
+  margin-left: 0px;
+}
+.footer_telefone span{
+  color: rgb(70, 70, 70);
+  font-size: 32px;
 }
 
 /* media query for tablets */
