--- a/css/sticky.css
+++ b/css/sticky.css
@@ -15,7 +15,7 @@
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 285px;
-    background-color: #f5f5f5;
+    background-color: white;
     padding-top: 10px;
   }
 
@@ -26,7 +26,7 @@
 
   body > .container {
     padding-top: 0px;
-    padding-bottom: 10px;
+    padding-bottom: 280px;
   }
   .container .text-muted {
     margin: 20px 0;
@@ -69,12 +69,23 @@ span.logo{
 }
 
 /* configuração footer */
+
 footer img.logo{
   float: none;
   width: 10rem;
+  margin-top: 30px;
 }
 footer span.logo{
   font-size: 20px;
+}
+.footer .row{
+  border-top: 1px solid rgb(204, 204, 204);
+  border-bottom: 1px solid rgb(204, 204, 204);
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.footer .linha{
+  border-left: 1px solid rgb(204, 204, 204);
 }
 
 footer ul li a, footer ul li a:hover{
@@ -107,9 +118,24 @@ footer ul li{
     padding-bottom: 0px;
     padding-right: 13px;
   }
+  .footer{
+    height: 550px !important;
+  }
   span.logo {
-    font-size: 18px;
+    font-size: 15px;
     margin-left: 3px;
+  }
+  body > .container {
+    padding-bottom: 550px;
+  }
+}
+/* media query for celulares e smart phones */
+@media(min-width: 360px) and (max-width: 767px){
+  .footer{
+    height: 500px !important;
+  }
+  body > .container {
+    padding-bottom: 500px;
   }
 }
 
