--- a/css/sticky.css
+++ b/css/sticky.css
@@ -109,6 +109,22 @@ footer ul li{
   color: rgb(70, 70, 70);
   font-size: 32px;
 }
+.paragrafo{
+  line-height: 200%;
+    color:#2d3436;
+    margin-top: 30px;
+}
+.img_home{
+  margin-top: 26px;
+  background-image: url("../img/bg_home.jpg");
+  background-position: center;
+  height: 600px;
+  margin-top: 70px;
+}
+.subititulo{
+  font-size: 40px;
+  text-decoration: none;
+}
 
 /* media query for tablets */
 @media(min-width: 768px) and (max-width: 992px){
