--- a/css/sticky.css
+++ b/css/sticky.css
@@ -121,6 +121,14 @@ footer ul li{
   height: 600px;
   margin-top: 70px;
 }
+.text_home{
+  background-color: white;
+  font-size: 48px;
+  margin-top: 200px;
+  padding: 30px;
+  max-width: 550px;
+  opacity: 0.5;
+}
 .subititulo{
   font-size: 40px;
   text-decoration: none;
