--- a/css/sticky.css
+++ b/css/sticky.css
@@ -128,6 +128,11 @@ span.logo{
   width: 80%;
   padding: 10px;
 }
+/* configuração da pagina trabalho */
+.realizacoes a{
+  color: black;
+  text-decoration: none;
+}
 
 /* configuração footer */
 
